<resources>
    <string name="app_name">Neko Online</string>
    <string name="notification_name">Android Neko</string>
    <string name="notification_channel_name">New cats</string>
    <string name="default_tile_name">\????</string>
    <string name="notification_title">A cat is here.</string>
    <string name="default_cat_name">Cat #%s</string>
    <string name="directory_name">Cats</string>
    <string name="confirm_delete">Forget %s?</string>
    <string-array name="cat_messages" translatable="false">
        <item>😸</item>
        <item>😹</item>
        <item>😺</item>
        <item>😻</item>
        <item>😼</item>
        <item>😽</item>
        <item>😾</item>
        <item>😿</item>
        <item>🙀</item>
        <item>💩</item>
        <item>🐁</item>
    </string-array>
    <string-array name="rare_cat_messages" translatable="false">
        <item>🍩</item>
        <item>🍭</item>
        <item>🍫</item>
        <item>🍨</item>
        <item>🔔</item>
        <item>🐝</item>
        <item>🍪</item>
        <item>🥧</item>
    </string-array>
    <string name="control_toy_title">Toy</string>
    <string name="control_toy_subtitle">Tap to use</string>
    <string name="control_toy_status">Cat attracted!</string>
    <string name="control_water_title">Water bubbler</string>
    <string name="control_water_subtitle">Swipe to fill</string>
    <string name="control_food_title">Food bowl</string>
    <string name="control_food_subtitle">Tap to refill</string>
    <string name="control_food_status_full">Full</string>
    <string name="control_food_status_empty">Empty</string>
    <string name="control_water_status">%1$d mL</string>

    <string name="username_finish_registration_tip">Your in-game nickname: %s\nClick the button below to create an account.</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_1">Welcome to Neko Online!</string>
    <string name="welcome_2">Neko Online is a free online game about collecting cats. Play alone or with friends.</string>
    <string name="welcome_3">We\'ll help you get started.\nIs this your first time playing, or do you already have an account?</string>
    <string name="welcome_reg_account">I’m new here</string>
    <string name="welcome_login_account">I already have an account</string>
    <string name="settings">Settings</string>
    <string name="cat">Cat</string>
    <string name="password_1">Great!</string>
    <string name="password_2">Now, you need to create a password to log in to your account.</string>
    <string name="text_input_password_hint_1">Create a password</string>
    <string name="text_input_password_hint_2">Repeat password</string>
    <string name="btn_next">Next</string>
    <string name="btn_back">Back</string>
    <string name="username_1">Let’s come up with a cool nickname</string>
    <string name="username_2">Enter a nickname, e.g., \'ProGamer206\'</string>
    <string name="text_input_username_hint">Nickname</string>
    <string name="username_3">You can change it later.</string>
    <string name="finish_1">All set!</string>
    <string name="finish_2">Everything is ready to start the game.</string>
    <string name="btn_continue">Continue</string>
    <string name="finish_privacy_policy">By clicking Continue, you automatically agree to Our Project Rules and Our Privacy Policy</string>
    <string name="loading_indicator_text">Please wait…</string>
    <string name="login_1">Welcome to Neko Online!</string>
    <string name="login_2">Log in to your account</string>
    <string name="text_input_password_hint">Password</string>
    <string name="login_reg_account">I don’t have an account</string>
    <string name="btn_login">Log In</string>
    <string name="synchronization">Synchronizing…</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_save">Save</string>
    <string name="config_server_address_hint">Server address</string>
    <string name="config_server_port_hint">Server port</string>
    <string name="server_config_title">ADVANCED SETTINGS</string>
    <string name="server_config_warn">Changing these settings may make your game unsafe or unstable. Only modify them if you know what you\'re doing.</string>
    <string name="password_error">Password is too long</string>
    <string name="username_error">Nickname is too long</string>
    <string name="register_activity_title_1">What’s your name?</string>
    <string name="register_activity_title_2">Security matters</string>
    <string name="register_activity_title_3">Finish!</string>
    <string name="login_activity_title">Login</string>
    <string name="server_config_activity_title">Server Configuration</string>
    <string name="error_dialog_title">Oops!</string>
    <string name="server_config_dialog_error">Failed to save changes. Please check the server configuration.</string>
    <string name="server_config_dialog_success">Server configuration has been updated.</string>
    <string name="dialog_success_title">Success</string>
    <string name="dialog_connection_error">We couldn’t connect to the server. Check your internet connection or try again later.</string>
    <string name="dialog_account_error">Failed to log in. Please check your username or password.</string>
    <string name="dialog_other_error">Something went wrong while trying to log in. Please try again.</string>
    <string name="dialog_unexpected_error">We couldn’t log you in due to an unknown error. Try again. If the issue persists, contact support.</string>
    <string name="dialog_support_btn">Support</string>
    <string name="dialog_successful_reg_continue_btn">Start</string>
    <string name="dialog_successful_reg_title">Welcome!</string>
    <string name="dialog_successful_reg_message">Account successfully created.\nLet’s start the game!</string>
    <string name="dialog_reg_error">We couldn’t create your account. Please try again. If the issue persists, try later or contact us.</string>
    <string name="dialog_reg_account_error">An account with this nickname already exists. Please try a different nickname.</string>
    <string name="main_dialog_connection_error">Failed to connect to the server. Check your internet connection.</string>
    <string name="dialog_logout_message">Are you sure you want to log out of this account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dialog_warning_title">Warning!</string>
    <string name="snackbar_connection_error">Failed to connect to the server. Let\'s try again after %1$d seconds</string>
    <string name="critical_error">Critical error!</string>
    <string name="critical_error_restart_game_button_text">Restart game</string>
    <string name="critical_error_send_data_button_text">Send error data</string>
    <string name="critical_error_message">There has been a critical error that requires you to restart the game. You can help us fix this error by clicking the button below.</string>
    <string name="critical_error_email_error">We\'re unable to prepare the email for sending. The error data was copied, so you can try to contact us and send it yourself.</string>
    <string name="critical_error_tg_text">Telegram (feedback)</string>
    <string name="cat_controls">Cat Controls</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="help">Help</string>
    <string name="dialog_server_config_error">Server configuration error. Please correct the server configuration or reset it.</string>
    <string name="empty_cat_list_tip">You haven’t collected any kitties. Ready to start?\n=^∇^*=</string>
    <string name="dialog_controls_error">Не получилось обновить плитку. Попробуйте ещё раз.</string>
</resources>